--- a/requirements.txt
+++ b/requirements.txt
@@ -1,49 +1,4 @@
-annotated-types
-anyio
-asgiref
-asyncpg
-certifi
-charset-normalizer
-click
-colorama
-distlib
-dnspython
-email_validator
-fastapi
-fastapi-cli
-fastapi-slim
-filelock
-greenlet
-h11
-httpcore
-httptools
-httpx
-idna
-Jinja2
-markdown-it-py
-MarkupSafe
-mdurl
-orjson
-platformdirs
-pydantic
-pydantic_core
-Pygments
-python-dotenv
-python-multipart
-PyYAML
-rich
-setuptools
-shellingham
-sniffio
-SQLAlchemy
-starlette
-typer
-typing_extensions
-ujson
-uvicorn
-virtualenv
-watchfiles
-websockets
-wheel
-psycopg2-binary
-
+fastapi==0.95.0
+uvicorn==0.22.0
+asyncpg==0.27.0
+psycopg2-binary==2.9.7
