--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,9 @@
-fastapi==0.95.0
-uvicorn==0.22.0
-asyncpg==0.27.0
-psycopg2-binary==2.9.7
+annotated-types==0.7.0
+anyio==4.6.0
+fastapi==0.115.0
+idna==3.10
+pydantic==2.9.2
+pydantic_core==2.23.4
+sniffio==1.3.1
+starlette==0.38.6
+typing_extensions==4.12.2
