--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,5 @@ pydantic_core==2.23.4
 sniffio==1.3.1
 starlette==0.38.6
 typing_extensions==4.12.2
-psycopg2-binary==2.9.7
-uvicorn==0.22.0
-asyncpg==0.27.0
+psycopg2-binary==2.9.5  # PostgreSQL adapter for Python
+uvicorn==0.15.0  # ASGI server to run your FastAPI application
