--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ pydantic_core==2.23.4
 sniffio==1.3.1
 starlette==0.38.6
 typing_extensions==4.12.2
-psycopg2-binary==2.9.5  # PostgreSQL adapter for Python
-uvicorn==0.15.0  # ASGI server to run your FastAPI application
+psycopg2-binary==2.9.5 
+uvicorn==0.15.0 
 sqlalchemy==1.4.41
 
